minor changes; added 2 new endpoints - get all user's tasks and get task by id;
