# internal/controller/http/handlers.go
@@ -351,7 +351,7 @@ func (s *Server) UseInvite(w http.ResponseWriter, r *http.Request) {
 //	@Accept		plain
 //	@Produce	json
 //
-//	@Success	200	{string}	model.GetMeResponse
+//	@Success	200	{object}	model.GetMeResponse
 //	@Failure	401	{object}	model.Error
 //	@Failure	404	{object}	model.Error
 //	@Failure	500	{object}	model.Error
@@ -370,5 +370,79 @@ func (s *Server) UserMe(w http.ResponseWriter, r *http.Request) {
 		s.respond(w, http.StatusInternalServerError, nil, reqID, zap.Error(err))
 		return
 	}
+	s.respond(w, http.StatusOK, resp, reqID)
+}
+
+// AllTasks godoc.
+//
+//	@Tags		Tasks
+//	@Summary	Get user tasks.
+//	@ID			get_tasks
+//	@Accept		plain
+//	@Produce	json
+//
+//	@Success	200	{object}	model.GetTasksResponse
+//	@Failure	401	{object}	model.Error
+//	@Failure	404	{object}	model.Error
+//	@Failure	500	{object}	model.Error
+//
+//	@Router		/tasks [get]
+func (s *Server) AllTasks(w http.ResponseWriter, r *http.Request) {
+	_ = r.Body.Close()
+	reqID := ReqIDField(middleware.GetReqID(r.Context()))
+	u := mw.UserFromCtx(r.Context())
+
+	resp, err := s.srv.GetUserTasks(r.Context(), u)
+	if err != nil {
+		if fErr, ok := err.(*fielderr.Error); ok {
+			s.respond(w, fErr.CodeHTTP(), fErr.Data(), append(fErr.Fields(), reqID)...)
+			return
+		}
+		s.respond(w, http.StatusInternalServerError, nil, zap.Error(err), reqID)
+		return
+	}
+
+	s.respond(w, http.StatusOK, resp, reqID)
+}
+
+// GetTask return summary info about task.
+//
+//	@Tags		Tasks
+//	@Summary	Get task by ID.
+//	@ID			get_task
+//	@Accept		plain
+//	@Produce	json
+//	@Param		task_id	path		string	true	"task id"
+//
+//	@Success	200		{object}	model.Task
+//	@Failure	400		{object}	model.Error
+//	@Failure	401		{object}	model.Error
+//	@Failure	403		{object}	model.Error
+//	@Failure	409		{object}	model.Error
+//	@Failure	500		{object}	model.Error
+//
+//	@Router		/tasks/{task_id} [get]
+func (s *Server) GetTask(w http.ResponseWriter, r *http.Request) {
+	reqID := ReqIDField(middleware.GetReqID(r.Context()))
+	u := mw.UserFromCtx(r.Context())
+	g, err := uuid.Parse(chi.URLParam(r, "task_id"))
+	if err != nil {
+		s.respond(w, http.StatusNotFound, nil, zap.Error(err))
+		return
+	}
+
+	var resp *model.Task
+	resp, err = s.srv.GetTask(r.Context(), u, g)
+	if err != nil {
+
+		if fErr, ok := err.(*fielderr.Error); ok {
+			s.respond(w, fErr.CodeHTTP(), fErr.Data(), append(fErr.Fields(), reqID)...)
+			return
+		}
+
+		s.respond(w, http.StatusInternalServerError, nil, reqID, zap.Error(err))
+		return
+	}
+
 	s.respond(w, http.StatusOK, resp, reqID)
 }
